[package]
name = "brt"
version = "0.2.4"
authors = ["Jan Willems <jw@elevenbits.com>"]
keywords = ["terminal", "btop"]
repository = "https://github.com/jw/brt"
readme = "README.md"
edition = "2021"
description = "btop in rust"
license = "EUPL-1.2"
rust-version = "1.88.0"

[[bin]]
name = "brt"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.41", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",  
] }
color-eyre = "0.6.5"
config = "0.15.18"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
human-panic = "2.0.4"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.177"
pretty_assertions = "1.4.1"
ratatui = { version = "0.30.0-alpha.5", features = ["serde", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.3.18"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde"] }
chrono = "0.4.42"
battery = "0.7.8"
procfs = "0.18.0"
uzers = "0.12.1"
humansize = "2.1.3"

[build-dependencies]
anyhow = "1.0.100"
vergen-gix = { version = "1.0.9", features = ["build", "cargo"] }

[dev-dependencies.cargo-husky]
version = "1"
#default-features = false
features = ["precommit-hook"]
